# aranet4-tui

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
src/aranet_log/: __init__.py  launchctl.py  logger.py  paths.py  tui.py
